# vibecode

./: .appimage-builder.yml  .env.example  .gitignore  .hermes-update-automation.md  =6.0  LICENSE  Makefile  README.md  REMOTE_ACCESS.md  apk_fix_recovery_prompt.md  build-all.sh  build-apk.sh  build-appimage.sh  build-desktop.sh  build-tauri-dist.sh  build-tauri.sh  capacitor.config.json  check-update.sh  debug_appimage.sh  debug_appimage_updated.sh  debug_extracted.sh  extract_and_run.sh  extract_appimage.sh  hermes-webui.service  kill-8786.sh  makefile  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  re-apply-vibecode-customizations.sh  readme.md  requirements.txt  restart_server.sh  run_extracted.sh  run_server_only.sh  server.py  server.py.rej  setup-cron.sh  setup_remote_access.sh  (+20 more)
.githooks/: post-merge
.playwright-mcp/: page-2026-04-22T01-19-44-840Z.yml  page-2026-04-22T01-26-49-491Z.yml  page-2026-04-22T01-28-41-986Z.yml  page-2026-04-24T05-05-40-539Z.yml  page-2026-04-24T05-06-13-513Z.yml  page-2026-04-24T05-06-38-005Z.yml  page-2026-04-24T05-08-04-156Z.yml  page-2026-04-24T05-08-35-173Z.yml  page-2026-04-24T05-08-55-684Z.yml  page-2026-04-24T05-09-24-777Z.yml  page-2026-04-24T16-30-24-654Z.yml  page-2026-04-24T16-34-36-845Z.yml  page-2026-04-24T16-37-40-738Z.yml  page-2026-04-24T16-48-52-372Z.yml  page-2026-04-24T16-50-37-184Z.yml  page-2026-04-24T16-50-45-424Z.yml  page-2026-04-24T16-51-04-003Z.yml  page-2026-04-24T17-02-36-427Z.yml  page-2026-04-24T17-03-01-221Z.yml  page-2026-04-24T17-03-15-983Z.yml  page-2026-04-24T17-04-09-055Z.yml  page-2026-04-24T17-07-32-978Z.yml  page-2026-04-30T22-25-03-433Z.yml  page-2026-04-30T22-25-50-655Z.yml  page-2026-04-30T22-38-54-836Z.yml  page-2026-04-30T22-39-01-874Z.yml  (+24 more)
vibecode-desktop/src-tauri/: Cargo.toml  tauri.conf.json
vibecode-desktop/src-tauri/src/: main.rs
(+383 files in other folders)
