[package]
name = "vibecode-desktop"
version = "1.0.0"
description = "VibeCode Desktop - Native desktop app for VibeCode"
authors = ["houseofmates"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-hide", "window-minimize", "window-close", "window-maximize", "window-unmaximize", "window-start-dragging", "window-show", "window-unminimize", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
